# opg-investigations-backlog

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Build_Investigator_Daily_from_Raw_14_11_25.ipynb  Build_Investigator_Daily_from_Raw_30_10_25.ipynb  Build_Investigator_Daily_from_Raw_30_10_25_with_plots_20251106T123600Z.ipynb  Build_Investigator_Daily_from_Raw_6_11_25.ipynb  Build_Investigator_Daily_from_Raw_JL_27_10_25_annotated_with_bayes_bambi_notes.ipynb  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Function_Usage_Examples_and_Patch_Notes.md  InvestigationBacklogActionPlan-HighLevel_LY.docx  LICENSE  Makefile  README.md  README_Investigations_Backlog_Documentation.md  README_Investigations_Backlog_Documentation_v2.md  SECURITY.md  Untitled.ipynb  app.py  bootstrap_github.sh  build_investigator_daily_from_raw_annotated.py  cli_nbwrap.py  config.yaml  demo.ipynb  eda.ipynb  import_issues_via_api.sh  interpretation.ipynb  issues.json  issues_action.csv  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  run_scenarios.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
configs/: config.yaml
docs/: AI_and_Optimisation.md  CODEOWNERS  DATA_LICENSE.md  LICENSE  OPG_Investigations_Backlog_Documentation.md  README_SRC_ADDON.md  ethics.md  index.md  interview_qna.md  issues.csv  operational_research_playbook.md  opg_eda.md  project_management.md  qa.md  qna.md  user_guide.md  wiki.md  working_agreement.md
scripts/: ci.sh
src/: Build_Investigator_Daily_from_Raw_02_12_25.ipynb  QA_improve_code.ipynb  README_build_daily.md  __init__.py  add_cell_ids.py  (+38 more)
(+362 files in other folders)
