[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opg-investigations-backlog"
version = "0.2.0"
description = "Transparent DES + AI optimisation for OPG investigations backlog"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}
authors = [{name = "OPG Analytics (MoJ)"}]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "simpy>=4.0.1",
    "pyyaml>=6.0.1",
    "pydantic>=2.7",
    "lifelines>=0.28",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
    "pre-commit>=3.7.1",
    "nbstripout>=0.7.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "streamlit>=1.36",
    "matplotlib>=3.8",
]

[project.scripts]
opg-sim = "opg_backlog_sim.cli:main"
